--- a/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/PruebaSistemaDeClientes/pom.xml
+++ b/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/PruebaSistemaDeClientes/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>JUnitExample</artifactId>
+  <artifactId>PruebaSistemaDeClientes</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>JUnitExample</name>
+  <name>PruebaSistemaDeClientes</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -26,15 +26,6 @@
       <version>5.7.2</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>4.5.1</version>
-      <scope>test</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
