--- a/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/desafioCalculadora/pom.xml
+++ b/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/desafioCalculadora/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>JUnitExample</artifactId>
+  <artifactId>desafioCalculadora</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>JUnitExample</name>
+  <name>desafioCalculadora</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -19,22 +19,18 @@
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>5.7.2</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>4.5.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
