--- a/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/PruebaSistemaDeClientes/pom.xml
+++ b/2.-DESAFIOS/3.-FUNDAMENTOS-PROGRAMACION-JAVA/7.-COLECCIONES-Y-API/PruebaSistemaDeClientes/pom.xml
@@ -19,13 +19,22 @@
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
+      <artifactId>junit-jupiter-api</artifactId>
       <version>5.7.2</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.6.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
